--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Star Farm Ventures - Bringing Israeli startups to the US market</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
@@ -388,6 +388,99 @@
                             <p class="founders_title">founders</p>
                             <p>GIL SADIS</p>
                             <p>IGOR SHAPIRO</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; askem.
+                        </div>
+                        <div class="overview askem pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Instantly discover what the world and your friends think about anything and everything. askem is an innovative platform that relies on beautiful and engaging visual questions that are easy and fun
+                            to create and share. Begin asking questions and receive feedback from specified audiences!
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="greybg url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>askem.com</p>
+                        </div>
+
+                        <div class="askem founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>ITAI HERMAN</p>
+                            <p>JONATHAN HEMI</p>
+                            <p>TOMER ZAKAI</p>
+                            <p>ZE'EV RUBINSTEIN</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; ringya.
+                        </div>
+                        <div class="overview ringya pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            Ringya is a mobile application that lets users instantly create mobile contact lists that remain organized in context. By simply taking a photo of a list, users receive direct digital access
+                            to it. All "Rings" can be shared with friends, colleagues, or spouses; therefore, numbers are readily available. By keeping contacts current, accessible, and relevant, Ringya provides easy association and connectivity.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="ringya2 url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>ringya.com</p>
+                        </div>
+
+                        <div class="ringya founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>GAL NACHUM</p>
+                            <p>ARIE GOFER</p>
+                            <p>KOBI HECHT</p>
+                            <p>YORAM GOREN</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div style="width: 450px;margin: auto;">
+                            Hello<br/>&nbsp; 7elements.
+                        </div>
+                        <div class="overview seven_elements3 pull-right">
+                            Overview
+                        </div>
+                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        </div>
+                        <div class="description">
+                            7 Elements Studio is an online gaming platform that creates strategy-oriented games for players to interact with, wherever, whenever. Players personalize their experience and can explore, socialize and compete throughout the games to create a lasting impact in the gaming environment. 7 Elements' game is always on, as it is a seamless part of the players' lives.
+                        </div>
+                        <div class="greybg frame pull-right" style="margin-top: -130px; width: 0px;height: 100px;">
+                        </div>
+                        <div class="greybg frame pull-right" style="width: 130px; margin-top: 0px; height: 0px;">
+                        </div>
+
+                        <div class="ringya2 url pull-left" style="margin-left: 50px;margin-top: 0px;">
+                            <p>7elementsstudios.com</p>
+                        </div>
+
+                        <div class="seven_elements2 founders pull-right">
+                            <p class="founders_title">founders</p>
+                            <p>SHAHAR SOREK</p>
+                            <p>TINO MATALON</p>
                         </div>
                     </li>
                 </ul>
