--- a/portfolio.html
+++ b/portfolio.html
@@ -61,12 +61,13 @@
                         <div style="width: 420px;margin: auto;">
                         Hello<br/>&nbsp; EQuala
                         </div>
+                        <a class="equala_logo" href="http://www.equala.fm"></a>
                         <div class="overview greybg pull-right">
                             Overview
                         </div>
-                        <div class="equala frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="equala frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="equala frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="equala frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             EQuala is a social radio application that lets users listen to their friends' music instantly. By following friends and adding them to the radio, users create a personalized radio station based on their favorite people and tunes.
@@ -95,12 +96,13 @@
                         <div style="width: 420px;margin: auto;">
                             Hello<br/>&nbsp; Bizzabo
                         </div>
+                        <a class="bizzabo_logo" href="http://www.equala.fm"></a>
                         <div class="overview greybg pull-right">
                             Overview
                         </div>
-                        <div class="bizzabo2 frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="bizzabo2 frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="bizzabo2 frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="bizzabo2 frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Bizzabo helps professionals discover events and conferences, in addition to new and relevant business opportunities, through the use of complex algorithms. Additionally, Bizzabo provides easy event navigation with an agenda, messaging capabilities, and detailed (up to date) event information.
@@ -126,12 +128,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; AppMyDay
                         </div>
+                        <a class="appmyday_logo" href="http://www.equala.fm"></a>
                         <div class="overview appmyday3 pull-right">
                             Overview
                         </div>
-                        <div class="appmyday2 frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="appmyday2 frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="appmyday2 frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="appmyday2 frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             AppMyDay allows every guest to become a photographer, making every event an interactive celebration. After clicking on the event link or scanning the event bar
@@ -157,12 +160,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; WisePricer
                         </div>
+                        <a class="wisepricer_logo" href="http://www.equala.fm"></a>
                         <div class="overview wisepricer pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             WisePricer is a full-featured pricing engine that monitors, analyzes and reprices retail products in real-time. With automated repricing and easy sync, the eCommerce tool enables online retailers to easily beat out their competition. WisePricer constantly scans and monitors thousands of online stores, so retailers can react to price changes as they happen.
@@ -186,12 +190,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; roomixer.
                         </div>
+                        <a class="roomixer_logo" href="http://www.equala.fm"></a>
                         <div class="overview roomixer pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Roomixer offers new revenue stream for hotels, as it provides the opportunity to generate income fromreferrals by buying and selling TurnAways. As a seller, Roomixer allows you
@@ -217,12 +222,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; swayy.
                         </div>
+                        <a class="swayy_logo" href="http://www.equala.fm"></a>
                         <div class="overview swayy pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Swayy is a content curation platform that helps small to medium businesses
@@ -247,12 +253,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; morpheus.
                         </div>
+                        <a class="morpheus_logo" href="http://www.equala.fm"></a>
                         <div class="overview morpheus pull-right">
                             Overview
                         </div>
-                        <div class="whitebg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="whitebg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="whitebg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="whitebg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Morpheus is a social platform of users and designer connected by objects of desire. Morpheus enables the recreation of a lost piece of, or the replication of an existing piece.
@@ -276,12 +283,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; playgem.
                         </div>
+                        <a class="playgem_logo" href="http://www.equala.fm"></a>
                         <div class="overview playgem pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             PlayGem is a social gaming platform that lets users play Backgammon with friends and with people from all over the world! Get free chips daily, compete, climb up the leader
@@ -306,12 +314,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; doalbums.
                         </div>
+                        <a class="doalbums_logo" href="http://www.equala.fm"></a>
                         <div class="overview blackbg pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             DoAlbums is an innovative web platform for designing and sharing engaging stories using photos and movies. While current photo-sharing platforms are great for day-to-day photo sharing, they prove inadequate for sharing stories and experiences. DoAlbums allows users to turn their memories, stories, and photos into an engaging digital masterpiece that is easy and fun to create.
@@ -335,12 +344,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; justad.
                         </div>
+                        <a class="justad_logo" href="http://www.equala.fm"></a>
                         <div class="overview justad pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             justAd is a cloud-based platform that enables the creation and display of interactive, rich and engaging ads. The platform does not require any coding and allows for the creation of ads that work on most platforms in the world. Execute your most creative ideas using a comprehensive set of designing tools and widgets, and receive the best performance results!
@@ -364,12 +374,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; licensario.
                         </div>
+                        <a class="licensario_logo" href="http://www.equala.fm"></a>
                         <div class="overview licensario pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Licensario helps SaaS businesses optimize their pricing plans, increase conversion rates and maximize revenues. Licensario's pricing algorithms, combined with users' behavior tracking and wrapped with payments infrastructure, give software companies the
@@ -394,12 +405,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; askem.
                         </div>
+                        <a class="askem_logo" href="http://www.equala.fm"></a>
                         <div class="overview askem pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Instantly discover what the world and your friends think about anything and everything. askem is an innovative platform that relies on beautiful and engaging visual questions that are easy and fun
@@ -426,12 +438,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; ringya.
                         </div>
+                        <a class="ringya_logo" href="http://www.equala.fm"></a>
                         <div class="overview ringya pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             Ringya is a mobile application that lets users instantly create mobile contact lists that remain organized in context. By simply taking a photo of a list, users receive direct digital access
@@ -458,12 +471,13 @@
                         <div style="width: 450px;margin: auto;">
                             Hello<br/>&nbsp; 7elements.
                         </div>
+                        <a class="seven_elements_logo" href="http://www.equala.fm"></a>
                         <div class="overview seven_elements3 pull-right">
                             Overview
                         </div>
-                        <div class="greybg frame pull-left" style="margin-top: 160px; width: 0px;height: 100px;">
+                        <div class="greybg frame pull-left" style="margin-top: 60px; width: 0px;height: 100px;">
                         </div>
-                        <div class="greybg frame" style="width: 150px; margin-top: 160px; height: 25px;">
+                        <div class="greybg frame" style="width: 150px; margin-top: 60px; height: 25px;">
                         </div>
                         <div class="description">
                             7 Elements Studio is an online gaming platform that creates strategy-oriented games for players to interact with, wherever, whenever. Players personalize their experience and can explore, socialize and compete throughout the games to create a lasting impact in the gaming environment. 7 Elements' game is always on, as it is a seamless part of the players' lives.
