--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a class="span2" href="portfolio.html">PORTFOLIO</a>
             <div class="span2">THE TEAM</div>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
-            <div class="span2">CONTACT</div>
+            <a class="span2" href="contact.html">CONTACT</a>
             <div class="span2">ABOUT</div>
         </div>
     </div>
