--- a/portfolio.html
+++ b/portfolio.html
@@ -40,10 +40,10 @@
 
     <div class="container-fluid" id="header">
         <div class="row-fluid" style="width: 1024px;margin: auto;padding-top: 20px; padding-bottom: 10px;">
-            <div class="span2"  style="text-decoration: line-through;">PORTFOLIO</div>
+            <a class="span2" href="portfolio.html">PORTFOLIO</a>
             <div class="span2">THE TEAM</div>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
-            <div class="span2">CONTACT</div>
+            <a class="span2" href="contact.html">CONTACT</a>
             <div class="span2">ABOUT</div>
         </div>
     </div>
