--- a/contact.html
+++ b/contact.html
@@ -103,13 +103,13 @@
                         <div class="span2">RINGYA</div><div class="span3">feedback@RINGYA.com</div><br/>
                     </div>
                     <div class="span6">
-                        <div class="span2">APPMYDAY</div><div class="span3">info@APPMY DAY.co.il</div><br/>
-                        <div class="span2">BIZZABO</div><div class="span3">BIZZABO.com</div><br/>
-                        <div class="span2">EQUALA</div><div class="span3">community@EQUALA.fm</div><br/>
-                        <div class="span2">JUSTAD</div><div class="span3">info@JUSTAD.mobi</div><br/>
-                        <div class="span2">MORPHEUS</div><div class="span3">MORPHE.US.com</div><br/>
-                        <div class="span2">ROOMIXER</div><div class="span3">info@ROOMIXER.com</div><br/>
-                        <div class="span2">RINGYA</div><div class="span3">feedback@RINGYA.com</div><br/>
+                        <div class="span2">WISEPRICER</div><div class="span3">WISEPRICER.com/contact</div><br/>
+                        <div class="span2">SWAYY</div><div class="span3">info@SWAYY.co</div><br/>
+                        <div class="span2">PLAYGEM</div><div class="span3">PLAYGEM.com</div><br/>
+                        <div class="span2">7 ELEMENTS</div><div class="span3">info@7ELEMENTSSTUDIOS.com</div><br/>
+                        <div class="span2">DO ALBUMS</div><div class="span3">DOALBUMS.com</div><br/>
+                        <div class="span2">ASKEM</div><div class="span3">support@askem.com</div><br/>
+                        <div class="span2">LICENSARIO</div><div class="span3">LICENSARIO.com/contact-us</div><br/>
                     </div>
                 </div>
             </div>
