--- a/portfolio.html
+++ b/portfolio.html
@@ -602,7 +602,7 @@ $('#slider').anythingSlider({
     theme: 'default',
     // Set mode to "horizontal", "vertical" or "fade"
     // (only first letter needed); replaces vertical option
-    mode: 'horizontal',
+    mode: 'horiz',
     // If true, the entire slider will expand to fit the parent element
     expand: true,
     // If true, solitary images/objects in the panel will expand to
