--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
 		<div class="container">	
 			<div class="row span12 center" style="margin-top: 60px;height: 800px;">
                 <ul id="slider">
-                    <li>
+                    <li class="panel1">
                         <div style="width: 420px;margin: auto;">
                         Hello<br/>&nbsp; EQuala
                         </div>
