--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="span5 offset1">
-                        <i class="icon-home icon-4x pull-left"></i>
+                        <i class="icon-phone icon-4x pull-left"></i>
                         <div style="margin-left: 10px; float: left;">
                             <br/>
                             646.670.0025
