--- a/index.html
+++ b/index.html
@@ -13,18 +13,6 @@
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->      
-  <style type="text/css">
-	  .navbar-inner
-	  {
-	  	padding: 0px 0 8px;
-	  }
-	  .navbar .brand
-	  {
-	  	padding: 0;
-	  	padding-top: 5px;
-	  }
-
-  </style>
 </head>
 <body>
 
@@ -35,7 +23,7 @@
             <div class="span2">THE TEAM</div>
             <a class="span4" style="margin-top:-20px;" href="index.html"></a>
             <a class="span2" href="contact.html">CONTACT</a>
-            <div class="span2">ABOUT</div>
+            <div class="span2">BLOG</div>
         </div>
     </div>
 
@@ -61,8 +49,8 @@
                   GET IN TOUCH
               </div>
               <div class="row-fluid contact-info">
-                  E: <a href="mailto:info@starmfarmventures.org">info@starmfarmventures.org</a><br/>
-                  P: <a href="callto:+19139083876">913.908.3876</a>
+                  <i class="icon-envelope"></i> <a href="mailto:info@starmfarmventures.org">info@starfarmventures.com</a><br/>
+                  <i class="icon-phone"></i> <a href="callto:+19139083876">&nbsp;913.908.3876</a>
               </div>
           </div>
           <div class="span5">
