--- a/index.html
+++ b/index.html
@@ -30,11 +30,7 @@
     
     <!-- #intro -->
 	<div class="main-container">
-		<div class="container-fluid" id="intro">	
-		<div class="container">	
-			<div class="row span6 center" style="margin-top: 160px;">
-			</div>
-		</div>
+        <img src="./assets/img/hands.jpg" width="100%">
 	</div>
     <!-- ends Intro -->
     <!-- #intro -->
