--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                 <ul id="slider">
                     <li class="panel1">
                         <div style="width: 420px;margin: auto;">
-                        Hello<br/>&nbsp; EQuala
+                        Hello<br/>&nbsp; equala.
                         </div>
                         <a class="equala_logo" href="http://www.equala.fm"></a>
                         <div class="overview greybg pull-right">
@@ -94,7 +94,7 @@
                     </li>
                     <li>
                         <div style="width: 420px;margin: auto;">
-                            Hello<br/>&nbsp; Bizzabo
+                            Hello<br/>&nbsp; bizzabo.
                         </div>
                         <a class="bizzabo_logo" href="http://www.equala.fm"></a>
                         <div class="overview greybg pull-right">
@@ -126,7 +126,7 @@
                     </li>
                     <li>
                         <div style="width: 450px;margin: auto;">
-                            Hello<br/>&nbsp; AppMyDay
+                            Hello<br/>&nbsp; appmyday.
                         </div>
                         <a class="appmyday_logo" href="http://www.equala.fm"></a>
                         <div class="overview appmyday3 pull-right">
@@ -158,7 +158,7 @@
                     </li>
                     <li>
                         <div style="width: 450px;margin: auto;">
-                            Hello<br/>&nbsp; WisePricer
+                            Hello<br/>&nbsp; wisepricer.
                         </div>
                         <a class="wisepricer_logo" href="http://www.equala.fm"></a>
                         <div class="overview wisepricer pull-right">
